<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ResultActivity"
    android:background="@drawable/pen1">

    <TextView
        android:id="@+id/tvres"
        android:layout_width="385dp"
        android:layout_height="73dp"
        android:background="#CD0808"
        android:backgroundTint="#E11919"
        android:gravity="center"
        android:text="@string/correct_answers"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <TextView
        android:id="@+id/tvres2"
        android:layout_width="386dp"
        android:layout_height="73dp"
        android:layout_marginTop="52dp"
        android:background="#FFFFFF"
        android:backgroundTint="#5DD31F"
        android:gravity="center"
        android:text="@string/wrong_answer"
        android:textColor="#070707"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvres" />

    <TextView
        android:id="@+id/tvres3"
        android:layout_width="392dp"
        android:layout_height="82dp"
        android:background="#FFFFFF"
        android:backgroundTint="#E3CF1F"
        android:gravity="center"
        android:text="@string/final_score"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531" />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="348dp"
        android:layout_height="80dp"
        android:text="@string/restart"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvres3" />
</androidx.constraintlayout.widget.ConstraintLayout>