<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newAccount"
    android:background="@drawable/pen1">

    <TextView
        android:id="@+id/textNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_new_account"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="498dp"
        android:gravity="clip_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textnewAccountName"
            android:layout_width="wrap_content"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="66dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="416dp"
            android:autofillHints=""
            android:background="@drawable/edittextbacground"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/Enter_fullname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#575050"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/txtnewEmail"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="62dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="321dp"
            android:background="@drawable/edittextbacground"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColorHint="#494040"
            android:textStyle="bold"
            android:autofillHints="" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="61dp"
            android:layout_marginTop="207dp"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="231dp"
            android:background="@drawable/edittextbacground"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:ems="10"
            android:hint="@string/Passwored"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#504343"
            android:textStyle="bold"
            android:autofillHints="" />

        <EditText
            android:id="@+id/newPasswordConfirm"
            android:layout_width="284dp"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="66dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="139dp"
            android:background="@drawable/edittextbacground"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#100F0F"
            android:textColorHint="#493C3C"
            android:textStyle="bold"
            android:autofillHints="" />

        <Button
            android:id="@+id/newAgreee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="288dp"
            android:layout_marginTop="446dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="4dp"
            android:text="@string/sign_up"
            android:textStyle="bold|italic" />

        <CheckBox
            android:id="@+id/newAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="63dp"
            android:layout_marginTop="392dp"
            android:layout_marginEnd="254dp"
            android:layout_marginBottom="57dp"
            android:checked="false"
            android:text="@string/i_agree"
            android:textColor="#0E0D0D"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>