<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textAlertPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pen1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:textColor="#0629ED"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/button1"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginBottom="232dp"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="268dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edittextbacground"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="Name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColorHint="#080809"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuiz"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="266dp"
        android:layout_height="58dp"
        android:background="@drawable/edittextbacground"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="#1C1B1B"
        android:textColorHint="#131313"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.595" />

    <TextView
        android:id="@+id/textForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@drawable/textselect"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <TextView
        android:id="@+id/textCreatenewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="@drawable/textselect"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toEndOf="@+id/textForgetPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.791" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="73dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989">

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="30dp"
            android:clickable="true"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/google"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="30dp"
            android:clickable="true"
            android:src="@drawable/download" />

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="46dp"
            android:layout_height="41dp"
            android:layout_margin="30dp"
            android:clickable="true"
            android:src="@drawable/twitter" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>